config/jokes_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jokes-app-deployment
spec:
  selector:
    matchLabels:
      app: jokes-app
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: jokes-app
    spec:
      containers:
        - name: jokes-app
          image: nikita99m/jokes-app
          ports:
            - containerPort: 7000
